<resources>
    <string name="app_name">Staying Healthy Quiz</string>
    <string name="true_false">True/False</string>
    <string name="multiple_choices">Quiz</string>
    <string name="quiz_app_v1_0">Staying Healthy Quiz</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="falseButton">False</string>
    <string name="trueButton">True</string>
    <string name="t_f_with_buttons">T/F with buttons</string>
    <string name="t_f_with_selection">T/F with selection</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="result_text">Congratulations! You got</string>
    <string name="books">Study</string>
    <string name="backtohome">Back to Home</string>
    <string name="quiz_easy">Easy</string>
    <string name="quiz_normal">Hard</string>
    <string name="quiz_random">Random</string>
    <string name="skip">Skip Entering Name</string>
    <string name="submit_name">Submit Name</string>
    <string name="enter_name">Would you like to enter a name?
    This will be displayed alongside your score.</string>
    <string name="default_name">Anonymous</string>
    <string name="high_score">High Scores:</string>
    <string name="high_score_nocolon">High Scores</string>
    <string name="random">Random</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="study_tab">Study</string>
    <string name="quiz_tab">Quiz</string>
    <string name="score_tab">Scores</string>
    <string name="FLC">Florida Literacy Coalition</string>
    <string name="home">Staying Healthy</string>
    <string name="choose_quiz">Staying Healthy Quiz</string>
    <string name="login">Login</string>
    <string name="username">Username: </string>
    <string name="email">Email:</string>
    <string name="password">Password: </string>
    <string name="password_new">New Password: </string>
    <string name="password_confirm">Confirm Password: </string>
    <string name="login_summary">Log in to to save your quiz scores and view other user\'s scores.</string>
    <string name="signup_ad">Don\'t have an account? Sign Up</string>
    <string name="login_ad">Have an account? Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signup_summary">Sign Up to save your quiz scores and view other user\'s scores. You can sign up with your email and a password. Passwords must be longer than 6 characters.</string>
    <string name="class_code">Class Code:</string>
    <string name="chapter_select">Chapter Select</string>
    <string name="result">Results</string>
    <string name="my_account">Account</string>
    <string name="logout">Log Out</string>
    <string name="change_cc">Change Class Code</string>
    <string name="change_pw">Change Password</string>
    <string name="change_name">Change Username</string>
    <string name="change_email">Change Email</string>
    <string name="classcode_new">New Class Code: </string>
    <string name="email_new">New Email: </string>
    <string name="username_new">New Username: </string>
    <string name="result_msg_login">Log in to save your next quiz score.</string>
    <string name="result_msg_addscore">Adding score to database&#8230;</string>
    <string name="result_msg_loadscore">Loading your saved scores</string>
    <string name="msg_load_cc">Loading class codes, please wait&#8230;</string>
    <string name="search_scores">Search Scores</string>
    <string name="my_scores">My Scores</string>
    <string name="all_scores">All Scores</string>
    <string name="start_date">Search Start Date: </string>
    <string name="end_date">Search End Date: </string>
    <string name="difficulty">Difficulty:</string>
    <string name="sort_by">Sort By:</string>
    <string name="limit">Number of Scores:</string>
    <string name="sort_users">Sort By User</string>
    <string name="sort_score">Sort By Top Score</string>
    <string name="search">Search</string>
    <string name="search_terms">Score Search Results</string>
    <string name="msg_loadscores">Loading scores, this may take a while&#8230;</string>
    <string name="msg_sortscores">Sorting scores&#8230;</string>
    <string name="change_warning">Internet access is required to change account info.</string>
    <string name="result_offline">You are currently offline. This score will be added to the list when this device is connected to the internet.</string>
    <string name="about">About</string>
    <string name="spanish">Español</string>
    <string name="english">English</string>
    <string name="top_bar">top_bar</string>
    <string name="bookshelf">Choose a Book</string>
    <string name="highscorestop20">Top 20 High Scores:</string>
    <string name="must_login">You must be logged in to search scores.</string>
    <string name="scores_to_search">Scores to Search:</string>
    <string name="spanish_next">Próximo</string>
    <string name="spanish_submit">Enviar respuesta</string>
    <string name="spanish_exit">Salida</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_username_progress">Checking if you can sign up&#8230;</string>
    <string name="staying_healthy_info">"To download books, visit the \n Florida Literacy Coalition website.</string>
    <string name="flc_website">Visit the FLC Website</string>
    <string name="no_class">No Class</string>
    <string name="about_app">About Staying Healthy</string>
    <string name="app_info">App Information</string>
    <string name="credits">Credits</string>
    <string name="assets">Assets</string>
    <string name="packages">Packages</string>
    <string name="copyright">Copyright</string>
    <string name="privacy_policy_text">Florida Literacy Coalition(FLC) is the sole owner of any information collected on this app. FLC will not share your information with any third party organizations. Emails are collected for quiz score identification purposes only. Users will not receive any unwanted information or communication in association with a creating a Staying Healthy Quiz account.</string>
    <string name="resources">Resource Credits</string>
    <string name="legal_info">Legal Information</string>
    <string name="app_dev_by">App Developed by the \n Florida Literacy Coalition.</string>
    <string name="flc_link">https://floridaliteracy.org/</string>
    <string name="correctDescription">Good Try!</string>
    <string name="incorrectDescription">Nice Job!</string>
</resources>
