<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeTopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_bar_with_book" />

    <ImageView
        android:id="@+id/imagePie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeQuizText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pie_chart" />

    <TextView
        android:id="@+id/topBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homeTopBar"
        app:layout_constraintEnd_toEndOf="@+id/homeTopBar"
        app:layout_constraintStart_toStartOf="@+id/homeTopBar"
        app:layout_constraintTop_toTopOf="@+id/homeTopBar" />

    <Button
        android:id="@+id/btnMCEasyLaunch"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePie"
        app:layout_constraintEnd_toStartOf="@id/btnMCNormalLaunch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imagePie"
        app:layout_constraintTop_toTopOf="@+id/imagePie"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnMCNormalLaunch"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePie"
        app:layout_constraintEnd_toEndOf="@+id/imagePie"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toEndOf="@+id/btnMCEasyLaunch"
        app:layout_constraintTop_toTopOf="@+id/imagePie"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnMCRandomLaunch"
        android:layout_width="0dp"
        android:layout_height="111dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePie"
        app:layout_constraintEnd_toEndOf="@+id/imagePie"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imagePie"
        app:layout_constraintTop_toBottomOf="@+id/btnMCEasyLaunch"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homeQuizText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/choose_quiz"
        android:textColor="@color/darkBlue"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTopBar" />

    <Button
        android:id="@+id/homeBtnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_custom_dark"
        android:text="@string/about"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMCRandomLaunch" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_custom_dark"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMCRandomLaunch" />

</androidx.constraintlayout.widget.ConstraintLayout>